tests/files/type_checker_tests/should_pass/152.cmdr
//Test that add operation type checks
x = 1 + 2.3;
