tests/files/type_checker_tests/should_fail/218.cmdr
//Should not allow changing variable types
x = 1;
x += 2.1;